# yomiage-discord-bot

./: .gitignore  LICENSE  README.md  aivisspeech.py  aqkanji2koe.py  aquestalk.py  build.gradle  config-example.yaml  config.py  console.py  database.py  discord_cmd.py  earthquake.py  main.py  migrate.py  pyproject.toml  renovate.json  romaji_converter.py  settings.gradle  text_converters.py  text_to_speech.py  vc.py  voice_character.json  voicevox.py
.github/: dependabot.yml
.github/workflows/: release.yml  ruff.yaml
gradle/wrapper/: gradle-wrapper.properties
src/main/java/com/rakku212/: Main.java
src/main/java/com/rakku212/command/: CommandManager.java  VoiceCharacterCatalog.java
src/main/java/com/rakku212/config/: BotConfig.java  Config.java
src/main/java/com/rakku212/console/: ConsoleListener.java
src/main/java/com/rakku212/database/: Database.java  Migration.java
src/main/java/com/rakku212/earthquake/: EarthquakeService.java
src/main/java/com/rakku212/listener/: BotListener.java
src/main/java/com/rakku212/util/: ConsoleEncoding.java  EmbedUtil.java  JapaneseUtil.java  LoggingConfig.java
src/main/java/com/rakku212/voice/: PcmAudioPlayer.java  SoundCoreBuffer.java  SoundCoreUtil.java  TextConverters.java  VoiceChannelService.java  VoiceConnectionHelper.java
src/main/java/com/rakku212/voice/dave/: GuardedDaveSession.java  GuardedDaveSessionFactory.java
src/main/java/com/rakku212/voice/engine/: AivisSpeechEngine.java  AquesTalkEngine.java  VoiceEngine.java  VoiceVoxEngine.java  (+1 more)
src/main/resources/: config.yaml  logback.xml  voice_character.json
